K8S/mariadb/base/service.yml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "mariadb"
spec:
  selector:
    app.kubernetes.io/name: "mariadb"
  ports:
    - name: "client"
      port: 3306
      protocol: "TCP"
      targetPort: "client"
